--- a/common/css/production.css
+++ b/common/css/production.css
@@ -1,10 +1,10 @@
-.content_box, .content_box_parent{
+.content_box{
     width: 300px !important;
     background-color: antiquewhite;
     border:3px #ffdda9 solid;
     transition: 0.5s;
 }
 
-.content_box :hover + .content_box_parent{
+.content_box :hover + .content_box article{
     box-shadow: 0 10px 25px 0 rgba(0, 0, 0, .5);
 }
