--- a/common/css/common.css
+++ b/common/css/common.css
@@ -245,14 +245,16 @@ margin-bottom: 30px;
 /* #contents：見出し
 -----------------------------------------*/
 #contents > section > h1 {
-background: url(../img/midashi1.png) no-repeat left bottom;
-font-size: 16px;
-margin-bottom: 1em;
+/* background: url(../img/midashi1.png) no-repeat left bottom; */
+border-bottom: 1px solid gray;
+font-size: 24px;
 font-family: Arial,"Hiragino Kaku Gothic Pro","メイリオ","ＭＳ Ｐゴシック",sans-serif;
 font-weight: bold;
 position: relative;
-padding: 10px 0 10px 35px;
+padding: 16px 0 0px 4px;
+margin-bottom: 8px;
 min-height: 19px;
+
 }
 #contents > section {
 width: 700px;
